--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@
 /* --- ESTILOS GENERALES Y ENCABEZADO --- */
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f33405; /* Fondo oscuro (look tech) */
+    background-color: #070707; /* Fondo oscuro (look tech) */
     color: #cccccc; /* Texto gris claro */
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #f08710; /* Azul brillante */
+    background-color: #f38304; /* Azul brillante */
     color: white;
     padding: 30px 0;
     text-align: center;
