--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #ffc400; /* Azul brillante */
+    background-color: #007bff; /* Azul brillante */
     color: white;
     padding: 30px 0;
     text-align: center;
